Login part modified notice edit and delete

--- a/app/src/main/res/layout/activity_admin_validation.xml
+++ b/app/src/main/res/layout/activity_admin_validation.xml
@@ -6,20 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".AdminValidation">
 
-    <EditText
-        android:id="@+id/etValidationKey"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/key"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Enter Validation Key"
-        android:layout_centerInParent="true"/>
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etValidationKey"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Enter Validation Key" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnValidate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:text="Validate"
         android:layout_centerInParent="true"
-        android:layout_below="@id/etValidationKey"/>
+        android:layout_below="@id/key"/>
+
+
 </RelativeLayout>
