--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,15 +20,17 @@
         android:textSize="30sp"
         android:textStyle="bold|italic"
         android:gravity="center_horizontal"
-        android:layout_toLeftOf="@id/btnEdit"/>
+        android:layout_toLeftOf="@id/ibEdit"/>
 
-    <Button
-        android:id="@+id/btnEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"/>
+    <ImageButton
+        android:id="@+id/ibEdit"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_edit_black_24dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@null"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/tvProfileType"
